[gd_scene load_steps=3 format=3 uid="uid://b5mscs5opxfyv"]

[ext_resource type="Script" uid="uid://bwn4lw8a4yhlx" path="res://data/gui/gui.gd" id="1_cnusi"]

[sub_resource type="LabelSettings" id="LabelSettings_cnusi"]
font_size = 24

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_cnusi")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13319641, 0.13319641, 0.13319638, 0.7411765)

[node name="GameInfo" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -39.0
offset_right = 56.0
offset_bottom = -16.0
grow_vertical = 0
text = "Test for Rumata Games
by Ultipuk"

[node name="ControlsInfo" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -39.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "WASD - movement
Space - dash"

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -113.0
offset_right = 131.5
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_cnusi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Load Saved"

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="DeathMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -113.0
offset_right = 131.5
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
text = "You Dead"
label_settings = SubResource("LabelSettings_cnusi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -33.0
offset_right = 32.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="DeathMenu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ExitButton" type="Button" parent="DeathMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="WinMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="WinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -107.5
offset_right = 88.0
offset_bottom = -84.5
grow_horizontal = 2
grow_vertical = 2
text = "All treasures collected!"
label_settings = SubResource("LabelSettings_cnusi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="WinMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="WinMenu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ExitButton" type="Button" parent="WinMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -137.0
offset_right = 131.5
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
text = "Pause"
label_settings = SubResource("LabelSettings_cnusi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -68.0
offset_right = 35.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="NewGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="SaveButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Load Saved"

[node name="ExitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MainMenu/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="DeathMenu/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="DeathMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="WinMenu/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="WinMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
